--- a/Land two/index.html
+++ b/Land two/index.html
@@ -47,10 +47,10 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section-why">اسئلة تترد الي اذهانكم</a>
+                  <a class="dropdown-item" href="#section-que">اسئلة تترد الي اذهانكم</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section-que">احصائيات تهمك عن شركتنا</a>
+                  <a class="dropdown-item" href="#section-state">احصائيات تهمك عن شركتنا</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#section-state"
