--- a/Land two/index.html
+++ b/Land two/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>الفرسان</title>
+    <title>مثلث الفرسان</title>
   </head>
   <body>
     <div class="header">
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="#"
-                    >افضل شركة نقل اساس بجدة - الفرسان -</a
+                    >افضل شركة نقل اساس بالمنطقة الشرقية - الفرسان -</a
                   >
                 </li>
               </ul>
@@ -84,7 +84,7 @@
           </h1>
         </div>
         <div class="box-info">
-          الفرسان لخدمات نقل الأثاث ن بجدة مع الفك والتركيب والتغليف بأسعار غير
+          الفرسان لخدمات نقل الأثاث ن بالمنطقة الشرقية مع الفك والتركيب والتغليف بأسعار غير
           مسبوقة ومن خلال طواقم مدربة ومتخصصة أسطول من الشاحنات في خدمتكم خدمة
           عملاء على مدار الـ24 ساعة تأمين شامل على منقولاتك 0543500074
         </div>
@@ -267,7 +267,7 @@
           <div class="collapse collapse-horizontal" id="third">
             <div class="card card-body" style="width: 600px">
               في المكان والزمان المحددين من قبل العميل يحضر فريق شركة نقل اثاث
-              بجدة لتنفيذ خدمات النقل المتفق عليها، بكفاءة وفي وقت قياسي.
+              بالمنطقة الشرقية لتنفيذ خدمات النقل المتفق عليها، بكفاءة وفي وقت قياسي.
             </div>
           </div>
         </div>
@@ -315,7 +315,7 @@
     <!-- Start Footer -->
     <div class="footer">
       <div class="container">
-        <h3>حقوق النشر © 2022 جميع الحقوق محفوظة - الفرسان بجدة</h3>
+        <h3>حقوق النشر © 2022 جميع الحقوق محفوظة - الفرسان بالمنطقة الشرقية</h3>
       </div>
     </div>
     <!-- End Footer -->
